package model;

public enum UserRole {
    USER, ADMIN;
}
