package frontend.bll;

public enum UserState {
    ACTIVE, INACTIVE, SUSPENDED;
}
